app/css/app.css
/* app css stylesheet */

body { 
  background-color: 0xfff;
  /*background: url('http://image.shutterstock.com/display_pic_with_logo/54561/127064891/stock-photo-sarajevo-bosnia-august-bookshelves-on-street-market-on-august-in-sarajevo-bosnia-127064891.jpg') no-repeat center center fixed; */
/*http://www.flickr.com/photos/rfduck/4905424782/sizes/o/*/
  /*background: url('http://farm5.staticflickr.com/4082/4905424782_167b33e4b7_o.jpg') no-repeat center center fixed; */
  background: url('/static/bookstore.jpg') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding-top: 60px;
  padding-bottom: 60px;
}

.main-content {
  background-color: rgba(245,245,245, 0.95);
  min-height: 500px;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;

  /*well well-large*/
  padding: 24px;
  margin-bottom: 20px;
  border: 1px solid #e3e3e3;
  border-radius: 6px;
}
.main-content.no-pad {
  background-color: transparent;
  border-width: 0px;
  max-width: 850px;
  padding: 0;
}
@media all and (min-height: 1000px) {
  .main-content {
    margin-top: 80px
  }
}

.inner-content {
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
}
.inner-content.wide {
  max-width: 700px;
}
.inner-content.wide h1 {
  padding-left: 50px;
}

.home-text {
  margin: 0;
  width: auto;
  padding: 48px;
}
.home-text.lightbg {
  background-color: rgba(245,245,245, 0.95);
}
.home-text.darkbg {
  background-color: rgba(218,218,218, 0.95);
}

.home-text.top-slide {
  border-radius: 6px 6px 0 0;
}
.home-hero-img {
  border: 2px #333 solid;
  border-radius: 4px;
}
.home-text.mid-slide {
}
.home-text.bot-slide {
  border-radius: 0 0 6px 6px;
}
.half-shipping {
  display: inline-block;
  width: auto;
  font-size: 11px;
  border-color: #666;
  background-color: #f5f5f5;
}
.half-shipping th, .half-shipping td {
  border-color: #666;
  line-height: 14px;
}
.half-shipping .price {
  text-align: center;
}
.half-shipping .additional {
  color: #666;
}
.half-shipping .highlight {
  padding-left: 2px;
  padding-right: 2px;
  background-color: #ff8;
}

.about-text {
  line-height: 18px;
  text-align: justify;
}
.about-image {
  border: 2px #111 solid;
  border-radius: 4px;
  margin-left: 24px;
  margin-bottom: 40px;
}

img.example {
  display: inline-block;
  border: 1px #999 dotted;
  border-radius: 4px;
  max-width: 60%;
  height: auto;
}
div.example {
  display: inline-block;
  border: 1px #999 dotted;
  border-radius: 4px;
  width: auto;
}
div.example-text {
  display: inline-block;
  overflow: hidden;
  width: 280px;
  margin-left: 10px;
  vertical-align: top;
  text-align: justify;
}

/*
.menu {
  list-style: none;
  border-bottom: 0.1em solid black;
  margin-bottom: 2em;
  padding: 0 0 0.5em;
}

.menu:before {
  content: "[";
}

.menu:after {
  content: "]";
}

.menu > li {
  display: inline;
}

.menu > li:before {
  content: "|";
  padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
  content: "";
  padding: 0;
}

.table th.text-right, .table td.text-right {
  text-align: right;
}

.table th.text-center, .table td.text-center {
  text-align: center;
}
*/

.navbar-inverse .brand,
.navbar-inverse .nav>li>a {
  color: #aaa;
}

.shelves-column {
  display: inline-block;
  vertical-align: top;
}
.books-checkbox {
  display: inline-block;
  vertical-align: top;
  margin-top: 30px;
}
.books-img {
  display: inline-block;
  width: auto;
  height: auto;
  max-height: 80px;
  max-width: 60px;
  vertical-align: top;
  margin-right: 10px;
}
img.seller-books-img {
  width: auto;
  height: auto;
  max-height: 80px;
  max-width: 60px;
}


.books-label {
  vertical-align: top;
  display: inline-block;
}

.books-title {
  display: inline-block;
  width: 400px;
}

.show-advanced {
  text-align: right;
}
.book-defaults {
  font-size: 18px;
  margin-left: 12px;
}
.book-defaults > div {
  font-size: 12px;
  margin-top: 8px;
}
.book-defaults > div:first-child {
  padding-bottom: 8px;
}

.book-options-form {
  position: relative;
  font-size: 12px;
  min-width: 440px;
  border: 1px solid #e3e3e3;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.book-options-form a.edit {
  position: absolute;
  right: 4px;
  top: 0;
  cursor: pointer;
}

.book-options-fieldset {
  padding: 2px 4px;
}

.book-options-fieldset:disabled {
  color: #999;
  cursor: not-allowed;
}
.book-options-fieldset:disabled select {
  color: #999;
  cursor: not-allowed;
}
.book-options-fieldset:disabled input {
  color: #999;
  cursor: not-allowed;
}
.book-options-fieldset:disabled label {
  color: #999;
  cursor: not-allowed;
}
.book-options-fieldset:disabled input[type="checkbox"] {
  cursor: not-allowed;
}

.book-options-select {
  height: 20px;
  width: auto;
  font-size: 12px;
}

input[type=number].book-options-input {
  height: 20px;
  width: 40px;
  font-size: 12px;
  padding-top: 0px;
  padding-bottom: 0px;
}

input[type=number].book-options-input::-webkit-inner-spin-button, 
input[type=number].book-options-input::-webkit-outer-spin-button { 
  -webkit-appearance: none;
  margin: 0;
}

.book-options-label {
  font-size: 12px;
}

.listings-wait-note {
  max-width: 400px;
  margin-right: auto;
  margin-left: auto;
  text-align: justify;
  padding-top: 20px;
  line-height: 18px
}
.listings-wait-note a {
  color: #6ac;
}

.seller-label {
  font-size: 24px;
  line-height: 30px;
}

.seller-book-comments {
  line-height: 16px;
}

.seller-book-listings {
  border-style: none;
  border-left: 3px solid #cccccc;
  border-radius: 0px;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
}

.seller-book-shipping-included {
  color: grey; 
  text-align: center; 
  font-size: 12px; 
  line-height: 14px
}

small {
  line-height: 16px;
}
 
/* wizard progress tracker css from https://github.com/twbs/bootstrap/issues/1982#issuecomment-7814657 */
.wizard { font-size: 12px; padding: 9px 0px 0px 0px; }
.wizard a {padding: 1px 16px 1px 24px; margin-right:5px; color:#ccc; background:#515151; position:relative; display:inline-block; }
.wizard a:before {width:0px; height:0px; border-top: 11px inset transparent; border-bottom: 11px inset transparent; border-left: 12px solid #222; position: absolute; content: ""; top: 0; left: 0;}
.wizard a:after {width:0px; height:0px; border-top: 11px inset transparent; border-bottom: 11px inset transparent; border-left: 12px solid #515151; position: absolute; content: ""; top: 0; right: -12px; z-index:2;}
.wizard a:first-child:before {border:none;}
.wizard a:last-child:after {border:none;}

.wizard a:first-child {-moz-border-radius: 4px 0 0 4px; -webkit-border-radius: 4px 0 0 4px; border-radius:   4px 0 0 4px;}
.wizard a:last-child {-moz-border-radius: 0 4px 4px 0; -webkit-border-radius: 0 4px 4px 0; border-radius:   0 4px 4px 0;}

.wizard .badge {margin:0 5px 0 18px; position:relative; top:-1px;}
.wizard a:first-child .badge {margin-left:0;}

.wizard .current {background:#005085; color:#ccc;}
.wizard .current:after {border-left-color:#005085;}

.wizard a:hover { text-decoration: none; }
.wizard .current { cursor: default; }
.wizard .wizard-disabled { cursor: default; color:#999; }

